# corplink-rs

./: .gitignore  config.example.json
.cursor/skills/corplink-otp/: SKILL.md
corplink-otp/: Cargo.toml
corplink-otp/scripts/: install.sh
corplink-otp/src/: keychain.rs  main.rs  secret.rs  totp.rs
src/: client.rs  config.rs  lib.rs  main.rs  otp_secret.rs  qrcode.rs
