[package]
name = "corplink-otp"
version = "0.1.0"
edition = "2021"
description = "Generate Feilian/CorpLink TOTP codes from an exported secret file"

[dependencies]
anyhow = "1.0"
base32 = "0.4"
byteorder = "1.5"
hmac-sha1 = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs"] }
